# actix-linfa-example

./: .gitignore  LICENSE  README.md
client/: client.py  record.json
saved_model/: model.json
server/: Cargo.toml
server/src/: main.rs  tree_model.rs
