[package]
name = "web-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.8.0"}
anyhow = "1.0.86"
env_logger = "0.11.3"
linfa = {version = "0.7.0"}
linfa-trees = { version = "0.7.0", features = ["serde"], default-features = true }
ndarray = {version = "0.15.6"}
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
structopt = "0.3.26"